# agentic-index

./: AGENTIC_INDEX.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
data/: projects.json
docs/: ci.example.yml  launch-notes.md  starter-stacks.md
docs/superpowers/plans/: 2026-05-15-agentic-index-implementation.md
docs/superpowers/specs/: 2026-05-15-agentic-index-design.md
public/: index.html
scripts/: generate_site.py
src/agentic_index/: __init__.py  catalog.py  cli.py  models.py
tests/: test_catalog.py  test_cli.py  test_site_generation.py
